Fix for ecom product item image background, also removed border on the image wrap.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -717,17 +717,13 @@ a.ecombasket-checkout-link {
             max-height: 410px;
             margin-top: 8px;
             margin-bottom: 1em;
-            background-position: center center;
+            background-position: 3000% 3000%;
             background-repeat: no-repeat;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
             overflow: hidden;
-            -webkit-box-shadow: 2px 2px 0 1px #D9D9D9;
-            box-shadow: 2px 2px 0 1px #D9D9D9;
-            img {
-            }
         }
     }
 }
